spi_directio/hls_ltr/example_acc/example_acc/logs/hls_run_csim_2544.backup.log
  **** HLS Build v2024.2 5238294
INFO: [HLS 200-2005] Using work_dir C:/GIM/hls_ltr/example_acc/example_acc 
INFO: [HLS 200-1505] Using default flow_target 'vivado'
Resolution: For help on HLS 200-1505 see docs.xilinx.com/access/sources/dita/topic?Doc_Version=2024.2%20English&url=ug1448-hls-guidance&resourceid=200-1505.html
INFO: [HLS 200-1465] Applying ini 'syn.file=C:/GIM/hls_ltr/example_acc.cpp' from C:/GIM/hls_ltr/example_acc/hls_config.cfg(8)
INFO: [HLS 200-10] Adding design file 'C:/GIM/hls_ltr/example_acc.cpp' to the project
INFO: [HLS 200-1465] Applying ini 'syn.file=C:/GIM/hls_ltr/send_data.cpp' from C:/GIM/hls_ltr/example_acc/hls_config.cfg(9)
INFO: [HLS 200-10] Adding design file 'C:/GIM/hls_ltr/send_data.cpp' to the project
INFO: [HLS 200-1465] Applying ini 'tb.file=C:/GIM/hls_ltr/example_acc_tb.cpp' from C:/GIM/hls_ltr/example_acc/hls_config.cfg(10)
INFO: [HLS 200-10] Adding test bench file 'C:/GIM/hls_ltr/example_acc_tb.cpp' to the project
INFO: [HLS 200-1465] Applying ini 'tb.file_cflags=C:/GIM/hls_ltr/example_acc_tb.cpp,-D HW_COSIM' from C:/GIM/hls_ltr/example_acc/hls_config.cfg(11)
INFO: [HLS 200-1465] Applying ini 'syn.top=example_acc' from C:/GIM/hls_ltr/example_acc/hls_config.cfg(7)
INFO: [HLS 200-1465] Applying ini 'flow_target=vivado' from C:/GIM/hls_ltr/example_acc/hls_config.cfg(4)
INFO: [HLS 200-1505] Using flow_target 'vivado'
Resolution: For help on HLS 200-1505 see docs.xilinx.com/access/sources/dita/topic?Doc_Version=2024.2%20English&url=ug1448-hls-guidance&resourceid=200-1505.html
INFO: [HLS 200-1465] Applying ini 'part=xczu3eg-sfvc784-1-e' from C:/GIM/hls_ltr/example_acc/hls_config.cfg(1)
INFO: [HLS 200-1611] Setting target device to 'xczu3eg-sfvc784-1-e'
INFO: [HLS 200-1465] Applying ini 'clock=10ns' from C:/GIM/hls_ltr/example_acc/hls_config.cfg(12)
INFO: [SYN 201-201] Setting up clock 'default' with a period of 10ns.
INFO: [HLS 200-1465] Applying ini 'clock_uncertainty=2ns' from C:/GIM/hls_ltr/example_acc/hls_config.cfg(13)
INFO: [SYN 201-201] Setting up clock 'default' with an uncertainty of 2ns.
INFO: [HLS 200-1465] Applying ini 'package.output.format=ip_catalog' from C:/GIM/hls_ltr/example_acc/hls_config.cfg(5)
INFO: [SIM 211-2] *************** CSIM start ***************
INFO: [SIM 211-4] CSIM will launch CLANG as the compiler.
INFO: [HLS 200-2036] Building debug C Simulation binaries
   Compiling ../../../../../example_acc_tb.cpp in debug mode
csim.mk:88: recipe for target 'obj/example_acc_tb.o' failed
In file included from ../../../../../example_acc_tb.cpp:4:
In file included from ../../../../../GIM_comm.h:1:
In file included from C:/Xilinx/Vitis/2024.2/include/ap_axi_sdata.h:15:
In file included from C:/Xilinx/Vitis/2024.2/include/ap_int.h:10:
In file included from C:/Xilinx/Vitis/2024.2/include/etc/ap_common.h:658:
In file included from C:/Xilinx/Vitis/2024.2/include/etc/ap_private.h:68:
In file included from C:/Xilinx/Vitis/2024.2/include/hls_half.h:26:
In file included from C:/Xilinx/Vitis/2024.2/include/etc/hls_half_fpo.h:19:
In file included from C:/Xilinx/Vitis/2024.2/include/hls_fpo.h:140:
In file included from C:/Xilinx/Vitis/2024.2/include/floating_point_v7_1_bitacc_cmodel.h:150:
C:/Xilinx/Vitis/2024.2/include/gmp.h:58:9: warning: '__GMP_LIBGMP_DLL' macro redefined [-Wmacro-redefined]
#define __GMP_LIBGMP_DLL  0
        ^
C:/Xilinx/Vitis/2024.2/include/floating_point_v7_1_bitacc_cmodel.h:142:9: note: previous definition is here
#define __GMP_LIBGMP_DLL 1
        ^
../../../../../example_acc_tb.cpp:8:17: error: unknown type name 'dataline'
int example_acc(dataline &data_in, bool start);
                ^
../../../../../example_acc_tb.cpp:14:5: error: unknown type name 'dataline'
    dataline data_in;
    ^
1 warning and 2 errors generated.
make: *** [obj/example_acc_tb.o] Error 1
ERROR: [SIM 211-100] 'csim_design' failed: compilation error(s).
INFO: [SIM 211-3] *************** CSIM finish ***************
ERROR: 4
INFO: [HLS 200-112] Total CPU user time: 3 seconds. Total CPU system time: 2 seconds. Total elapsed time: 10.79 seconds; peak allocated memory: 621.062 MB.
